--- a/index.html
+++ b/index.html
@@ -42,267 +42,106 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <script defer="" src="https://use.fontawesome.com/releases/v6.5.2/js/all.js"></script>
-
-    <style>
-        /* Offline CSS */
-
-        /* Import Google font - Comfortaa */
-        @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@200;300;400;500;600;700&display=swap");
-
-        :link {
-            color: #6f6;
-        }
-
-        :visited {
-            color: #66f;
-        }
-
-        :root {
-            --brand: #99ff99;
-            --ink: #111;
-            --muted: #6b7280;
-            --bg: #ffffff;
-        }
-
-        html,
-        body {
-            height: 100%
-        }
-
-        body {
-            margin: 0;
-            background: var(--bg);
-            color: var(--ink);
-            font: 16px system-ui, -apple-system, Segoe UI, Roboto, Inter, Arial, sans-serif
-        }
-
-        .app {
-            display: grid;
-            min-height: 100dvh;
-            grid-template-rows: auto 1fr auto
-        }
-
-        header {
-            position: sticky;
-            top: 0;
-            background: #fff;
-            border-bottom: 1px solid #e5e7eb;
-            z-index: 10
-        }
-
-        header .bar {
-            max-width: 960px;
-            margin: auto;
-            display: flex;
-            gap: .75rem;
-            align-items: center;
-            padding: .75rem 1rem
-        }
-
-        .logo {
-            width: 32px;
-            height: 32px;
-            display: inline-grid;
-            place-items: center;
-            border-radius: 8px;
-            background: var(--brand)
-        }
-
-        .title {
-            font-weight: 700;
-            letter-spacing: .2px
-        }
-
-        main {
-            max-width: 960px;
-            margin: auto;
-            padding: 1rem;
-            display: grid;
-            gap: 1rem
-        }
-
-        .card {
-            border: 1px solid #e5e7eb;
-            border-radius: 16px;
-            box-shadow: 0 8px 24px rgba(0, 0, 0, .06);
-            padding: 1rem
-        }
-
-        .grid {
-            display: grid;
-            gap: 1rem
-        }
-
-        @media(min-width:960px) {
-            .grid {
-                grid-template-columns: 1.15fr .85fr
-            }
-        }
-
-        textarea {
-            width: 100%;
-            min-height: 120px;
-            border: 1px solid #e5e7eb;
-            border-radius: 12px;
-            padding: .875rem;
-            font: inherit
-        }
-
-        .controls {
-            display: flex;
-            flex-wrap: wrap;
-            gap: .5rem
-        }
-
-        .controls>* {
-            flex: 0 0 auto
-        }
-
-        .btn {
-            appearance: none;
-            border: 1px solid #d1d5db;
-            background: #fff;
-            border-radius: 12px;
-            padding: .6rem .9rem;
-            cursor: pointer;
-            font-weight: 600
-        }
-
-        .btn.brand {
-            background: var(--brand);
-            border-color: var(--brand);
-            color: #0a0a0a
-        }
-
-        .btn.ghost {
-            background: transparent
-        }
-
-        .row {
-            display: flex;
-            gap: .5rem;
-            align-items: center;
-            flex-wrap: wrap
-        }
-
-        label {
-            font-size: .9rem;
-            color: var(--muted)
-        }
-
-        select,
-        input[type="number"] {
-            border: 1px solid #e5e7eb;
-            border-radius: 10px;
-            padding: .45rem .6rem;
-            font: inherit
-        }
-
-        canvas,
-        svg {
-            width: 100%;
-            height: auto;
-            display: block;
-            background: #fff;
-            border-radius: 12px;
-            border: 1px dashed #e5e7eb
-        }
-
-        .footer {
-            padding: 1rem;
-            color: #6b7280;
-            text-align: center
-        }
-
-        .pill {
-            display: inline-flex;
-            gap: .4rem;
-            align-items: center;
-            padding: .25rem .6rem;
-            border-radius: 999px;
-            background: #eef6ee;
-            border: 1px solid #d6f5d6;
-            color: #065f46;
-            font-size: .8rem
-        }
-
-        .hint {
-            color: #6b7280;
-            font-size: .9rem
-        }
-    </style>
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/qrcode-generator/qrcode.js" as="script" />
 </head>
 
 <body>
-    <div class="app">
-        <header>
-            <div class="bar">
-                <div class="logo" aria-hidden="true">▦</div>
-                <div class="title">QR Maker</div>
-                <span class="pill" title="Works offline"><span>●</span> Works Offline</span>
-                <div style="margin-left:auto" class="row">
-                    <button class="btn ghost" id="installBtn" hidden>Install</button>
+    <header class="appbar">
+        <div class="logo-dot"></div>
+        <h1>QR Maker</h1>
+        <button id="installBtn" class="btn ghost" aria-label="Install">Install</button>
+    </header>
+
+    <main class="wrap">
+        <section class="card">
+            <h2>Create QR</h2>
+            <p class="hint">Paste or share your text / link. The QR updates live. Brand colour <code>#99ff99</code>,
+                light theme only.</p>
+
+            <label for="qrtext" class="visually-hidden">QR text</label>
+            <textarea id="qrtext" rows="4" placeholder="Type or share something…"></textarea>
+
+            <div class="row">
+                <label class="chk">
+                    <input type="checkbox" id="apiToggle" checked />
+                    <span>Use QRServer PNG (online)</span>
+                </label>
+                <label class="chk">
+                    <input type="checkbox" id="marginToggle" checked />
+                    <span>Quiet zone</span>
+                </label>
+                <label class="sel">
+                    ECC:
+                    <select id="ecc">
+                        <option value="M">M (15%)</option>
+                        <option value="L">L (7%)</option>
+                        <option value="Q">Q (25%)</option>
+                        <option value="H">H (30%)</option>
+                    </select>
+                </label>
+                <label class="sel">
+                    Size:
+                    <select id="size">
+                        <option>256</option>
+                        <option selected>512</option>
+                        <option>768</option>
+                        <option>1024</option>
+                    </select>px
+                </label>
+            </div>
+
+            <div class="preview">
+                <div class="pane">
+                    <h3>Preview</h3>
+                    <div id="preview"></div>
+                </div>
+                <div class="pane">
+                    <h3>PNG (API)</h3>
+                    <img id="apiImg" alt="QR PNG from API" />
                 </div>
             </div>
-        </header>
 
-        <main>
-            <section class="card grid">
-                <div class="left">
-                    <h2>Create a QR</h2>
-                    <p class="hint">Type or paste any text/URL. If you share to this app from the system share menu, it
-                        auto‑fills here.</p>
-                    <textarea id="qrInput" placeholder="Paste text or URL…"></textarea>
-                    <div class="controls">
-                        <div class="row"><label for="qrSize">Size</label><input id="qrSize" type="number" value="512"
-                                min="128" max="2048" step="64"></div>
-                        <div class="row"><label for="qrMargin">Margin</label><input id="qrMargin" type="number"
-                                value="4" min="0" max="32"></div>
-                        <div class="row"><label for="qrEC">Error‑Correction</label>
-                            <select id="qrEC">
-                                <option value="L">L (7%)</option>
-                                <option value="M" selected>M (15%)</option>
-                                <option value="Q">Q (25%)</option>
-                                <option value="H">H (30%)</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="controls">
-                        <button class="btn brand" id="makeBtn">Generate</button>
-                        <button class="btn" id="downloadPngBtn">Download PNG</button>
-                        <button class="btn" id="downloadSvgBtn">Download SVG</button>
-                        <button class="btn" id="copyImgBtn">Copy Image</button>
-                        <button class="btn" id="shareBtn">Share</button>
-                        <button class="btn ghost" id="clearBtn">Clear</button>
-                    </div>
-                </div>
-                <div>
-                    <h2>Preview</h2>
-                    <canvas id="qrCanvas" width="512" height="512" aria-label="QR preview"></canvas>
-                    <p class="hint">Tip: Install this as an app. On Android, you can also share text/URLs directly to
-                        “QR Maker”.</p>
-                </div>
-            </section>
+            <div class="row actions">
+                <button id="downloadSvg" class="btn">Download SVG</button>
+                <button id="downloadPng" class="btn">Download PNG</button>
+                <button id="shareOut" class="btn ghost">Share QR</button>
+            </div>
 
-            <section class="card">
-                <h3>Why this app?</h3>
-                <ul>
-                    <li>Works fully offline after first visit.</li>
-                    <li>Shows up in the system share sheet (Web Share Target).</li>
-                </ul>
-            </section>
-        </main>
+            <p class="fine">
+                PNGs via <a href="https://goqr.me/api/" target="_blank" rel="noreferrer">QRServer API</a>. Works offline
+                via a local encoder; PNG API requires connectivity. :contentReference[oaicite:2]{index=2}
+            </p>
+        </section>
+    </main>
 
-        <footer class="footer">Made with ❤️ by Augy.</footer>
-    </div>
+    <footer class="footer">
+        <small>Made with ❤️ by Augy.</small>
+    </footer>
 
     <script>
-        // Register Service Worker early for offline + share target handling
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/sw.js');
-            });
-        }
+        // PWA install prompt
+        let deferredPrompt;
+        const installBtn = document.getElementById('installBtn');
+        window.addEventListener('beforeinstallprompt', (e) => {
+            e.preventDefault();
+            deferredPrompt = e;
+            installBtn.style.display = 'inline-flex';
+        });
+        installBtn.addEventListener('click', async () => {
+            if (!deferredPrompt) return;
+            deferredPrompt.prompt();
+            await deferredPrompt.userChoice;
+            deferredPrompt = null;
+            installBtn.style.display = 'none';
+        });
+
+        // Register SW
+        if ('serviceWorker' in navigator) navigator.serviceWorker.register('/sw.js');
+
+        // Load QR encoder (cached by SW for offline)
+        const lib = document.createElement('script');
+        lib.src = 'https://cdn.jsdelivr.net/npm/qrcode-generator/qrcode.js';
+        document.head.appendChild(lib);
     </script>
 
     <script src="/script.js"></script>
