--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <meta charset="utf-8">
     <title>QR Maker | UwU Apps</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Your offline QR Maker with widget and sharing options.">
+    <meta name="description" content="The QR Maker that will show up in sharing options.">
 
     <meta property="og:type" content="website">
     <meta property="og:title" content="QR Maker | UwU Apps" />
     <meta property="og:site_name" content="UwU Apps" />
-    <meta property="og:description" content="Your offline QR Maker with widget and sharing options." />
+    <meta property="og:description" content="The QR Maker that will show up in sharing options." />
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jua">
     <link rel="stylesheet" href="/style.css">
